--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div id="publications" class="content-region hide">
             <h3>Articles</h3>
             <ul>
-                <li>María Gabriela Armentano and Mauricio Mendiluce, Finite element approximation of the stationary Navier-Stokes problem with non-smooth data, preprint (2024).
+                <li>María Gabriela Armentano and Mauricio Mendiluce, <i>Finite element approximation of the stationary Navier-Stokes problem with non-smooth data</i>, preprint (2024).
                 </li>
             </ul>
             <h3>Thesis</h3>
