--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           <div id="publications" class="content-region hide">
             <h3>Articles</h3>
             <ul>
+                <li>María Gabriela Armentano, Andrea Ceretani, Mauricio Mendiluce and Sebastián Oriolo, <i>Indoor radon concentration: Mathematical model and numerical simulation.</i>, preprint MACI (2025).
+                </li>
                 <li>María Gabriela Armentano and Mauricio Mendiluce, <i>Finite element approximation of the stationary Navier-Stokes problem with non-smooth data</i>, preprint (2024).
                 </li>
             </ul>
@@ -77,6 +79,9 @@
           <div id="talks" class="content-region hide">
             <h3>Conferences</h3>
             <ul>
+               <li><i>Indoor radon concentration: Mathematical model and numerical simulation.</i>
+                    <b>X Congress of Applied, Computational and Industrial Mathematics</b>, Córdoba, Argentina. May 2025. 
+                </li>
                 <li><i>Aproximación por elementos finitos del problema de Navier-Stokes estacionario con dato de borde no suave.</i>
                     <b>UMA 2024 - Annual reunion of the Argentine Mathematical Union</b>, Catamarca, Argentina. September 2024. 
                 </li>
