--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div id="publications" class="content-region hide">
             <h3>Articles</h3>
             <ul>
-                <li>María Gabriela Armentano, Andrea Ceretani, Mauricio Mendiluce and Sebastián Oriolo, <i>Indoor radon concentration: Mathematical model and numerical simulation.</i>, preprint MACI (2025).
+                <li>María Gabriela Armentano, Andrea Ceretani, Mauricio Mendiluce and Sebastián Oriolo, <i>Indoor radon concentration: Mathematical model and numerical simulation.</i>, MACI. Vol 10,588-591 (2025). <a href="https://drive.google.com/file/d/1h_ZoH3l_Xi-8XBHfPOwQ7ZQ3m3hv6xFX/view?usp=sharing">Link.
                 </li>
                 <li>María Gabriela Armentano and Mauricio Mendiluce, <i>Finite element approximation of the stationary Navier-Stokes problem with non-smooth data</i>, preprint (2024).
                 </li>
@@ -123,3 +123,4 @@
     
   </body>
 </html>
+
