--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <ul>
                 <li>María Gabriela Armentano, Andrea Ceretani, Mauricio Mendiluce and Sebastián Oriolo, <i>Indoor radon concentration: Mathematical model and numerical simulation.</i>, MACI. Vol 10,588-591 (2025). <a href="https://drive.google.com/file/d/1h_ZoH3l_Xi-8XBHfPOwQ7ZQ3m3hv6xFX/view?usp=sharing">Link. </a>
                 </li>
-                <li>María Gabriela Armentano and Mauricio Mendiluce, <i>Finite element approximation of the stationary Navier-Stokes problem with non-smooth data</i>, preprint (2024).
+                <li>María Gabriela Armentano and Mauricio Mendiluce, <i>Finite element approximation of the stationary Navier-Stokes problem with non-smooth data</i>, preprint (2024). <a href="https://arxiv.org/abs/2509.16461"> arXiv </a>
                 </li>
             </ul>
             <h3>Thesis</h3>
@@ -123,5 +123,6 @@
     
   </body>
 </html>
+
 
 
