--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
           <div id="talks" class="content-region hide">
             <h3>Conferences</h3>
             <ul>
+              
+               <li><i>Finite element approximation of the stationary Navier–Stokes problem with non-smooth Dirichlet data: a priori and a posteriori error analysis.</i>
+                    <b>Mixed Local and Nonlocal Operators: Analytical, Numerical and Probabilistic Perspectives</b>, Buenos Aires, Argentina. Nov 2025. 
+                </li>
                <li><i>Indoor radon concentration: Mathematical model and numerical simulation.</i>
                     <b>X Congress of Applied, Computational and Industrial Mathematics</b>, Córdoba, Argentina. May 2025. 
                 </li>
@@ -123,6 +127,7 @@
     
   </body>
 </html>
+
 
 
 
