--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           
           <div id="teaching" class="content-region hide">
-            As <a href="https://web.dm.uba.ar/index.php/institucional/integrantes/JTP?view=teacher&id=207:mendiluce-mauricio"></a> Jefe de Trabajos Practicos in the Department of Mathematics of the FCEyN (University of Buenos Aires).
+            As <a href="https://web.dm.uba.ar/index.php/institucional/integrantes/JTP?view=teacher&id=207:mendiluce-mauricio"> Jefe de Trabajos Prácticos</a> in the Department of Mathematics of the FCEyN (University of Buenos Aires).
             <h3>2025</h3>
             <ul>
                 <li>Análisis Numérico (Second semester)</li>
@@ -132,6 +132,7 @@
     
   </body>
 </html>
+
 
 
 
